# appstack

./: .gitignore  README.md  items.db
go/: go.mod  main.go
kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/org/example/: App.kt
python/fastapi/: .env.template  .envrc.template  Makefile  README.md  main.py  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
